Site edit copy button Firefox UI fixed.
git-svn-id: http://xe-core.googlecode.com/svn/branches/maserati@12022 201d5d3c-b55e-5fd7-737f-ddc643e51545

--- a/modules/menu/tpl/css/sitemap.css
+++ b/modules/menu/tpl/css/sitemap.css
@@ -119,7 +119,7 @@ body>.x{max-width:none !important}
 .theme ul ul>li>*:focus{background:#666;color:#fff}
 .theme ul ul>li>a:hover>i,
 .theme ul ul>li>a:focus>i{background-image:url(../../../../common/img/glyphicons-halflings-white.png)}
-.theme ul ul>li>button{width:100%}
+.theme ul ul>li>button{width:100%;padding-right:0}
 /* Properties */
 #properties ul{margin:8px 0 0 0;padding:0 0 8px 0;border-bottom:1px solid #ddd}
 #properties li{position:relative;white-space:nowrap}
